Fixes to scrolling pane + overlapping of review panel

--- a/css/gitphp.css
+++ b/css/gitphp.css
@@ -181,7 +181,7 @@ p.too_large_diff img {
 }
 
 div.suppressed {
-    background-color: #d9d8d1;
+    background-color: #f9f9f9;
 }
 
 .hidden {
