--- a/css/gitphpskin.css
+++ b/css/gitphpskin.css
@@ -22,7 +22,6 @@ body {
 	background-color: white;
 	color: #303030;
 	margin: 0;
-	height: 100%;
 	min-height: 100%;
 	font-family: "SF UI Text", Helvetica, Arial, sans-serif;
 }
